--- a/ocserv.conf
+++ b/ocserv.conf
@@ -22,10 +22,10 @@ max-same-clients = 0
 #session-timeout = 86400
 #idle-timeout = 1200
 #mobile-idle-timeout = 2400
-#keepalive = 32400
+keepalive = 32400
 #auth-timeout = 40 
 dpd = 90
-mobile-dpd = 30
+mobile-dpd = 1800
 #switch-to-tcp-timeout = 25
 persistent-cookies = true
 cookie-timeout = 86400
@@ -34,12 +34,12 @@ rekey-time = 43200
 rekey-method = ssl
 
 #avoid reconnect after started short
-try-mtu-discovery = false
+try-mtu-discovery = true
 compression = false
 #no-compress-limit = 256
 output-buffer = 50
 use-utmp = true
-use-occtl = false
+use-occtl = true
 predictable-ips = false
 ping-leases = false
 
