--- a/ocserv.conf
+++ b/ocserv.conf
@@ -27,14 +27,14 @@ keepalive = 32400
 dpd = 90
 mobile-dpd = 1800
 #switch-to-tcp-timeout = 25
-persistent-cookies = true
+persistent-cookies = false
 cookie-timeout = 86400
 deny-roaming = false
 rekey-time = 43200
 rekey-method = ssl
 
 #avoid reconnect after started short
-try-mtu-discovery = true
+try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
 output-buffer = 50
