--- a/ocserv.conf
+++ b/ocserv.conf
@@ -27,7 +27,7 @@ keepalive = 32400
 dpd = 90
 mobile-dpd = 1800
 #switch-to-tcp-timeout = 25
-persistent-cookies = false
+persistent-cookies = true
 cookie-timeout = 86400
 deny-roaming = false
 rekey-time = 43200
