--- a/ocserv.conf
+++ b/ocserv.conf
@@ -19,6 +19,7 @@ max-clients = 0
 max-same-clients = 0
 
 # timeout 
+server-stats-reset-time = 604800
 #session-timeout = 86400
 #idle-timeout = 1200
 #mobile-idle-timeout = 2400
@@ -26,11 +27,11 @@ keepalive = 32400
 #auth-timeout = 40 
 dpd = 90
 mobile-dpd = 1800
-#switch-to-tcp-timeout = 25
+switch-to-tcp-timeout = 25
 persistent-cookies = true
 cookie-timeout = 86400
 deny-roaming = false
-rekey-time = 43200
+rekey-time = 172800
 rekey-method = ssl
 
 #avoid reconnect after started short
@@ -38,7 +39,7 @@ try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
 output-buffer = 50
-use-utmp = true
+#use-utmp = true
 use-occtl = true
 predictable-ips = false
 ping-leases = false
