--- a/ocserv.conf
+++ b/ocserv.conf
@@ -28,7 +28,7 @@ keepalive = 32400
 dpd = 90
 mobile-dpd = 1800
 switch-to-tcp-timeout = 25
-persistent-cookies = true
+persistent-cookies = false
 cookie-timeout = 86400
 deny-roaming = false
 rekey-time = 172800
@@ -48,7 +48,7 @@ tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 cisco-client-compat = true
 #match-tls-dtls-ciphers = false
-dtls-legacy = true
+#dtls-legacy = true
 
 device = vpns
 ipv4-network = 192.168.18.0
