--- a/ocserv.conf
+++ b/ocserv.conf
@@ -19,14 +19,14 @@ max-clients = 0
 max-same-clients = 0
 
 # timeout 
-server-stats-reset-time = 604800
+#server-stats-reset-time = 604800
 #session-timeout = 86400
-#idle-timeout = 1200
-#mobile-idle-timeout = 2400
+idle-timeout = 1200
+mobile-idle-timeout = 2400
 keepalive = 32400
 #auth-timeout = 40 
 dpd = 90
-mobile-dpd = 1800
+mobile-dpd = 60
 switch-to-tcp-timeout = 25
 persistent-cookies = false
 cookie-timeout = 86400
