--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,5 +1,6 @@
 resolv-file = /etc/resolv.dnsmasq.conf
+conf-dir = /etc/dnsmasq.d
 strict-order  
 listen-address = 192.168.18.1
 cache-size = 1000
-add-subnet = 116.246.6.0/24
+
