--- a/ocserv.conf
+++ b/ocserv.conf
@@ -41,7 +41,7 @@ compression = false
 output-buffer = 50
 #use-utmp = true
 use-occtl = true
-predictable-ips = false
+predictable-ips = true
 ping-leases = false
 
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
