--- a/ocserv.conf
+++ b/ocserv.conf
@@ -41,13 +41,14 @@ compression = false
 output-buffer = 50
 #use-utmp = true
 use-occtl = true
-predictable-ips = true
+predictable-ips = false
 ping-leases = false
 
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 cisco-client-compat = true
 #match-tls-dtls-ciphers = false
+dtls-psk = false
 dtls-legacy = true
 
 device = vpns
