--- a/ocserv.conf
+++ b/ocserv.conf
@@ -38,7 +38,7 @@ rekey-method = ssl
 try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
-output-buffer = 50
+output-buffer = 5000
 #use-utmp = true
 use-occtl = true
 predictable-ips = false
@@ -48,7 +48,7 @@ tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 cisco-client-compat = true
 #match-tls-dtls-ciphers = false
-dtls-psk = false
+#dtls-psk = false
 dtls-legacy = true
 
 device = vpns
