--- a/ocserv.conf
+++ b/ocserv.conf
@@ -28,7 +28,7 @@ keepalive = 32400
 dpd = 90
 mobile-dpd = 1800
 switch-to-tcp-timeout = 25
-persistent-cookies = false
+persistent-cookies = true
 cookie-timeout = 86400
 deny-roaming = false
 rekey-time = 172800
@@ -38,7 +38,7 @@ rekey-method = ssl
 try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
-output-buffer = 5000
+output-buffer = 500
 #use-utmp = true
 use-occtl = true
 predictable-ips = false
