--- a/ocserv.conf
+++ b/ocserv.conf
@@ -38,10 +38,10 @@ rekey-method = ssl
 try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
-output-buffer = 500
+output-buffer = 50
 #use-utmp = true
 use-occtl = true
-predictable-ips = false
+predictable-ips = true
 ping-leases = false
 
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
