--- a/ocserv.conf
+++ b/ocserv.conf
@@ -35,7 +35,7 @@ rekey-time = 172800
 rekey-method = ssl
 
 #avoid reconnect after started short
-try-mtu-discovery = true
+try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
 output-buffer = 50
