--- a/ocserv.conf
+++ b/ocserv.conf
@@ -45,8 +45,8 @@ predictable-ips = true
 ping-leases = false
 
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-tls-priorities = "SECURE256:%PROFILE_MEDIUM:%SERVER_PRECEDENCE:-ECDHE-ECDSA:-AES-256-GCM:-CAMELLIA-256-GCM:-RSA:-DHE-RSA:-AES-256-CBC:-CAMELLIA-256-CBC:-VERS-TLS1.1:-VERS-TLS1.0:-VERS-DTLS1.0:-VERS-DTLS1.2"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+
 cisco-client-compat = true
 #match-tls-dtls-ciphers = false
 #dtls-psk = false
