--- a/ocserv.conf
+++ b/ocserv.conf
@@ -48,8 +48,8 @@ ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 
 cisco-client-compat = false
-match-tls-dtls-ciphers = true
-#dtls-psk = false
+#match-tls-dtls-ciphers = true
+dtls-psk = false
 #dtls-legacy = true
 
 device = vpns
