--- a/ocserv.conf
+++ b/ocserv.conf
@@ -47,10 +47,10 @@ ping-leases = false
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 
-cisco-client-compat = false
+cisco-client-compat = true
 #match-tls-dtls-ciphers = true
-dtls-psk = false
-#dtls-legacy = true
+#dtls-psk = false
+dtls-legacy = true
 
 device = vpns
 ipv4-network = 192.168.18.0
