--- a/ocserv.conf
+++ b/ocserv.conf
@@ -44,9 +44,9 @@ use-occtl = true
 predictable-ips = true
 ping-leases = false
 
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-#tls-priorities = "DHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES128-SHA256:DHE-RSA-AES256-SHA"
+tls-priorities = "ECDHE_RSA_AES256_GCM_SHA384:ECDHE_RSA_AES128_GCM_SHA256:ECDHE_RSA_AES128_SHA256:EcDHE_RSA_AES256_SHA"
 
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
