--- a/ocserv.conf
+++ b/ocserv.conf
@@ -14,7 +14,7 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
-isolate-workers = false
+isolate-workers = true
 max-clients = 0
 max-same-clients = 0
 
@@ -36,7 +36,7 @@ rekey-method = ssl
 
 #avoid reconnect after started short
 try-mtu-discovery = false
-compression = false
+compression = true
 #no-compress-limit = 256
 output-buffer = 50
 #use-utmp = true
@@ -44,9 +44,9 @@ use-occtl = true
 predictable-ips = true
 ping-leases = false
 
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-tls-priorities = "ECDHE_RSA_AES256_GCM_SHA384:ECDHE_RSA_AES128_GCM_SHA256:ECDHE_RSA_AES128_SHA256:EcDHE_RSA_AES256_SHA"
+#tls-priorities = "ECDHE_RSA_AES256_GCM_SHA384:ECDHE_RSA_AES128_GCM_SHA256:ECDHE_RSA_AES128_SHA256:EcDHE_RSA_AES256_SHA"
 
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
