--- a/ocserv.conf
+++ b/ocserv.conf
@@ -46,7 +46,7 @@ ping-leases = false
 
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-tls-priorities = "SECURE128:+SECURE192:-VERS-ALL:+VERS-TLS1.2:+VERS-DTLS1.2:+VERS-DTLS1.0"
+tls-priorities = "NORMAL:+VERS-TLS1.2:+VERS-DTLS1.2:+VERS-DTLS1.0"
 
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
