--- a/ocserv.conf
+++ b/ocserv.conf
@@ -8,6 +8,10 @@ server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
 ca-cert = /etc/ocserv/ca-cert.pem
 
+server-cert = /etc/v2ray/wy_cer.pem
+server-key = /etc/v2ray/wy_key.pem
+ca-cert = /etc/v2ray/ca_cert.pem
+
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
 run-as-user = nobody
