--- a/ocserv.conf
+++ b/ocserv.conf
@@ -4,9 +4,9 @@ auth = "certificate"
 tcp-port = 443
 udp-port = 443
 
-server-cert = /etc/ocserv/server-cert.pem
-server-key = /etc/ocserv/server-key.pem
-ca-cert = /etc/ocserv/ca-cert.pem
+#server-cert = /etc/ocserv/server-cert.pem
+#server-key = /etc/ocserv/server-key.pem
+#ca-cert = /etc/ocserv/ca-cert.pem
 
 server-cert = /etc/v2ray/wy_cer.pem
 server-key = /etc/v2ray/wy_key.pem
