--- a/ocserv.conf
+++ b/ocserv.conf
@@ -10,7 +10,7 @@ udp-port = 443
 
 server-cert = /etc/v2ray/wy_cer.pem
 server-key = /etc/v2ray/wy_key.pem
-ca-cert = /etc/v2ray/ca_cert.pem
+ca-cert = /etc/v2ray/ca_cer.pem
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
