--- a/ocserv.conf
+++ b/ocserv.conf
@@ -8,9 +8,9 @@ udp-port = 443
 #server-key = /etc/ocserv/server-key.pem
 #ca-cert = /etc/ocserv/ca-cert.pem
 
-server-cert = /etc/v2ray/wy_cer.pem
-server-key = /etc/v2ray/wy_key.pem
-ca-cert = /etc/v2ray/ca_cer.pem
+server-cert = /etc/ocserv/oc_serv_cer.pem
+server-key = /etc/ocserv/oc_serv_key.pem
+ca-cert = /etc/ocserv/ca_cer.pem
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
