--- a/ocserv.conf
+++ b/ocserv.conf
@@ -4,13 +4,9 @@ auth = "certificate"
 tcp-port = 443
 udp-port = 443
 
-#server-cert = /etc/ocserv/server-cert.pem
-#server-key = /etc/ocserv/server-key.pem
-#ca-cert = /etc/ocserv/ca-cert.pem
-
-server-cert = /etc/ocserv/oc_serv_cer.pem
-server-key = /etc/ocserv/oc_serv_key.pem
-ca-cert = /etc/ocserv/ca_cer.pem
+server-cert = /etc/ocserv/server-cert.pem
+server-key = /etc/ocserv/server-key.pem
+ca-cert = /etc/ocserv/ca-cert.pem
 
 socket-file = /var/run/ocserv-socket
 pid-file = /var/run/ocserv.pid
@@ -48,9 +44,9 @@ use-occtl = true
 predictable-ips = true
 ping-leases = false
 
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-tls-priorities = "NORMAL:+VERS-TLS1.2:+VERS-DTLS1.2:+VERS-DTLS1.0"
+#tls-priorities = "NORMAL:+VERS-TLS1.2:+VERS-DTLS1.2:+VERS-DTLS1.0"
 
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
