--- a/ocserv.conf
+++ b/ocserv.conf
@@ -44,9 +44,9 @@ use-occtl = true
 predictable-ips = true
 ping-leases = false
 
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-#tls-priorities = "NORMAL:+VERS-TLS1.2:+VERS-DTLS1.2:+VERS-DTLS1.0"
+tls-priorities = ""NONE:+VERS-DTLS1.2:+COMP-NULL:+AES-128-GCM:+AEAD:+ECDHE-RSA:+SIGN-ALL:%COMPAT""
 
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
