--- a/ocserv.conf
+++ b/ocserv.conf
@@ -46,7 +46,7 @@ ping-leases = false
 
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-tls-priorities = ""NONE:+VERS-DTLS1.0:+COMP-NULL:+AES-128-GCM:+AEAD:+ECDHE-RSA:+SIGN-ALL:%COMPAT""
+tls-priorities = "NONE:+VERS-DTLS1.2:+COMP-NULL:+AES-128-GCM:+AEAD:+ECDHE-RSA:+SIGN-ALL:%COMPAT"
 
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
