--- a/ocserv.conf
+++ b/ocserv.conf
@@ -36,7 +36,7 @@ rekey-method = ssl
 
 #avoid reconnect after started short
 try-mtu-discovery = false
-compression = true
+compression = false
 #no-compress-limit = 256
 output-buffer = 50
 #use-utmp = true
@@ -45,8 +45,8 @@ predictable-ips = true
 ping-leases = false
 
 #tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
-tls-priorities = "NONE:+VERS-TLS1.2:+VERS-DTLS1.2:+COMP-NULL:+AES-128-GCM:+AEAD:+ECDHE-RSA:+SIGN-ALL:%COMPAT"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+#tls-priorities = "NONE:+VERS-TLS1.2:+VERS-DTLS1.2:+COMP-NULL:+AES-128-GCM:+AEAD:+ECDHE-RSA:+SIGN-ALL:%COMPAT"
 
 
 cisco-client-compat = true
