--- a/ocserv.conf
+++ b/ocserv.conf
@@ -28,7 +28,7 @@ keepalive = 32400
 dpd = 90
 mobile-dpd = 1800
 switch-to-tcp-timeout = 25
-persistent-cookies = true
+persistent-cookies = false
 cookie-timeout = 86400
 deny-roaming = false
 rekey-time = 172800
@@ -48,10 +48,9 @@ ping-leases = false
 tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 #tls-priorities = "NONE:+VERS-TLS1.2:+VERS-DTLS1.2:+COMP-NULL:+AES-128-GCM:+AEAD:+ECDHE-RSA:+SIGN-ALL:%COMPAT"
 
-
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
-#dtls-psk = false
+dtls-psk = false
 dtls-legacy = true
 
 device = vpns
