--- a/ocserv.conf
+++ b/ocserv.conf
@@ -28,7 +28,7 @@ keepalive = 32400
 dpd = 90
 mobile-dpd = 1800
 switch-to-tcp-timeout = 25
-persistent-cookies = false
+persistent-cookies = true
 cookie-timeout = 86400
 deny-roaming = false
 rekey-time = 172800
@@ -44,8 +44,8 @@ use-occtl = true
 predictable-ips = true
 ping-leases = false
 
-#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
-tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
+tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
+#tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-RSA:-VERS-SSL3.0:-ARCFOUR-128"
 #tls-priorities = "NONE:+VERS-TLS1.2:+VERS-DTLS1.2:+COMP-NULL:+AES-128-GCM:+AEAD:+ECDHE-RSA:+SIGN-ALL:%COMPAT"
 
 cisco-client-compat = true
