--- a/ocserv.conf
+++ b/ocserv.conf
@@ -50,7 +50,7 @@ tls-priorities = "NORMAL:%SERVER_PRECEDENCE:%COMPAT:-VERS-SSL3.0"
 
 cisco-client-compat = true
 #match-tls-dtls-ciphers = true
-dtls-psk = false
+#dtls-psk = false
 dtls-legacy = true
 
 device = vpns
