--- a/ocserv.conf
+++ b/ocserv.conf
@@ -2,7 +2,7 @@
 auth = "certificate"
 
 tcp-port = 443
-udp-port = 443
+#udp-port = 443
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
