--- a/ocserv.conf
+++ b/ocserv.conf
@@ -2,7 +2,7 @@
 auth = "certificate"
 
 tcp-port = 443
-#udp-port = 443
+udp-port = 443
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
@@ -21,8 +21,8 @@ max-same-clients = 0
 # timeout 
 #server-stats-reset-time = 604800
 #session-timeout = 86400
-idle-timeout = 1200
-mobile-idle-timeout = 2400
+#idle-timeout = 1200
+#mobile-idle-timeout = 2400
 keepalive = 32400
 #auth-timeout = 40 
 dpd = 90
