--- a/ocserv.conf
+++ b/ocserv.conf
@@ -14,7 +14,7 @@ run-as-user = nobody
 run-as-group = daemon
 cert-user-oid = 2.5.4.3
 #cert-group-oid = 2.5.4.11
-isolate-workers = true
+isolate-workers = false
 max-clients = 0
 max-same-clients = 0
 
@@ -40,7 +40,7 @@ compression = false
 #no-compress-limit = 256
 output-buffer = 50
 #use-utmp = true
-use-occtl = true
+#use-occtl = true
 predictable-ips = true
 ping-leases = false
 
