--- a/china-domains.conf
+++ b/china-domains.conf
@@ -3,7 +3,9 @@ server=/gov.cn/114.114.114.114
 server=/baidu.com/114.114.114.114
 server=/baiducontent.com/114.114.114.114
 server=/baidupcs.com/114.114.114.114
-server=/baidustatic/114.114.114.114
+server=/baidustatic.com/114.114.114.114
+server=/baifubao.com/114.114.114.114
+server=/bdimg.com/114.114.114.114
 server=/bytecdn.cn/114.114.114.114
 server=/bytedance.com/114.114.114.114
 server=/bytedns.net/114.114.114.114
@@ -35,3 +37,18 @@ server=/weibo.com.cn/114.114.114.114
 server=/sinaedge.com/114.114.114.114
 server=/sinaimg.com/114.114.114.114
 server=/sinajs.com/114.114.114.114
+server=/gtimg.cn/114.114.114.114
+server=/gtimg.com/114.114.114.114
+server=/gtimg.com.cn/114.114.114.114
+server=/imqq.com/114.114.114.114
+server=/myapp.com/114.114.114.114
+server=/qcloud.com/114.114.114.114
+server=/qcloudimg.com/114.114.114.114
+server=/qpic.cn/114.114.114.114
+server=/qq.com/114.114.114.114
+server=/qqmail.com/114.114.114.114
+server=/wechat.com/114.114.114.114
+server=/smtcdns.com/114.114.114.114
+server=/wegame.com/114.114.114.114
+server=/weiyun.com/114.114.114.114
+server=/tenpay.com/114.114.114.114
