--- a/ocserv.conf
+++ b/ocserv.conf
@@ -62,7 +62,8 @@ dns = 192.168.18.1
 route = 0.0.0.0/248.0.0.0
 route = 8.0.0.0/254.0.0.0
 route = 11.0.0.0/255.0.0.0
-route = 12.0.0.0/252.0.0.0
+@route = 12.0.0.0/252.0.0.0
+route = 12.0.0.0/254.0.0.0
 route = 16.0.0.0/248.0.0.0
 route = 24.0.0.0/254.0.0.0
 route = 26.0.0.0/255.0.0.0
