--- a/china-domains-dingo.conf
+++ b/china-domains-dingo.conf
@@ -1,1 +1,54 @@
-
+server=/cn/127.0.0.1#5353
+server=/gov.cn/127.0.0.1#5353
+server=/baidu.com/127.0.0.1#5353
+server=/baiducontent.com/127.0.0.1#5353
+server=/baidupcs.com/127.0.0.1#5353
+server=/baidustatic.com/127.0.0.1#5353
+server=/baifubao.com/127.0.0.1#5353
+server=/bdimg.com/127.0.0.1#5353
+server=/bytecdn.cn/127.0.0.1#5353
+server=/bytedance.com/127.0.0.1#5353
+server=/bytedns.net/127.0.0.1#5353
+server=/douyin.com/127.0.0.1#5353
+server=/huaxiong.com/127.0.0.1#5353
+server=/jokecommunity.com/127.0.0.1#5353
+server=/neihanshequ.com/127.0.0.1#5353
+server=/pstatp.com/127.0.0.1#5353
+server=/snssdk.com/127.0.0.1#5353
+server=/toutiao.com/127.0.0.1#5353
+server=/toutiaocdn.com/127.0.0.1#5353
+server=/toutiaocloud.com/127.0.0.1#5353
+server=/toutiaopage.com/127.0.0.1#5353
+server=/wukong.com/127.0.0.1#5353
+server=/ixigua.com/127.0.0.1#5353
+server=/ixgvideo.com/127.0.0.1#5353
+server=/365yg.com/127.0.0.1#5353
+server=/douyu.tv/127.0.0.1#5353
+server=/douyu.com/127.0.0.1#5353
+server=/douyucdn.cn/127.0.0.1#5353
+server=/sina.com/127.0.0.1#5353
+server=/sinaimg.cn/127.0.0.1#5353
+server=/sina.com.cn/127.0.0.1#5353
+server=/sinajs.cn/127.0.0.1#5353
+server=/sina.cn/127.0.0.1#5353
+server=/sinaapp.com/127.0.0.1#5353
+server=/weibo.com/127.0.0.1#5353
+server=/weibo.com.cn/127.0.0.1#5353
+server=/sinaedge.com/127.0.0.1#5353
+server=/sinaimg.com/127.0.0.1#5353
+server=/sinajs.com/127.0.0.1#5353
+server=/gtimg.cn/127.0.0.1#5353
+server=/gtimg.com/127.0.0.1#5353
+server=/gtimg.com.cn/127.0.0.1#5353
+server=/imqq.com/127.0.0.1#5353
+server=/myapp.com/127.0.0.1#5353
+server=/qcloud.com/127.0.0.1#5353
+server=/qcloudimg.com/127.0.0.1#5353
+server=/qpic.cn/127.0.0.1#5353
+server=/qq.com/127.0.0.1#5353
+server=/qqmail.com/127.0.0.1#5353
+server=/wechat.com/127.0.0.1#5353
+server=/smtcdns.com/127.0.0.1#5353
+server=/wegame.com/127.0.0.1#5353
+server=/weiyun.com/127.0.0.1#5353
+server=/tenpay.com/127.0.0.1#5353
