--- a/dingo.service
+++ b/dingo.service
@@ -4,7 +4,7 @@ Wants=network.target
 
 [Service]
 Type=simple
-ExecStart=/usr/bin/dingo -port 5353 -gdns:auto 
+ExecStart=/usr/bin/dingo -port 5353 -gdns:auto -gdns:edns 202.102.192.0
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-abort
 StandardOutput=null
