--- a/china-domains-dingo.conf
+++ b/china-domains-dingo.conf
@@ -1,6 +1,9 @@
 server=/cn/127.0.0.1#5353
 server=/gov.cn/127.0.0.1#5353
 server=/taobao.com/127.0.0.1#5353
+server=/tmall.com/127.0.0.1#5353
+server=/163.com/127.0.0.1#5353
+server=/126.com/127.0.0.1#5353
 server=/xinhuanet.com/127.0.0.1#5353
 server=/people.com.cn/127.0.0.1#5353
 server=/jd.com/127.0.0.1#5353
