--- a/china-domains-dingo.conf
+++ b/china-domains-dingo.conf
@@ -3,7 +3,9 @@ server=/gov.cn/127.0.0.1#5353
 server=/taobao.com/127.0.0.1#5353
 server=/tmall.com/127.0.0.1#5353
 server=/163.com/127.0.0.1#5353
+server=/163yun.com/127.0.0.1#5353
 server=/126.com/127.0.0.1#5353
+server=/36kr.com/127.0.0.1#5353
 server=/xinhuanet.com/127.0.0.1#5353
 server=/people.com.cn/127.0.0.1#5353
 server=/jd.com/127.0.0.1#5353
@@ -13,15 +15,21 @@ server=/baidupcs.com/127.0.0.1#5353
 server=/baidustatic.com/127.0.0.1#5353
 server=/baifubao.com/127.0.0.1#5353
 server=/bdimg.com/127.0.0.1#5353
+server=/duapps.com/127.0.0.1#5353
+server=/quyaoya.com/127.0.0.1#5353
+server=/tiebaimg.com/127.0.0.1#5353
+server=/xiaodutv.com/127.0.0.1#5353
 server=/bytecdn.cn/127.0.0.1#5353
 server=/bytedance.com/127.0.0.1#5353
 server=/bytedns.net/127.0.0.1#5353
 server=/douyin.com/127.0.0.1#5353
+server=/douban.com/127.0.0.1#5353
 server=/huaxiong.com/127.0.0.1#5353
-server=/jokecommunity.com/127.0.0.1#5353
-server=/neihanshequ.com/127.0.0.1#5353
-server=/pstatp.com/127.0.0.1#5353
-server=/snssdk.com/127.0.0.1#5353
+server=/zhihu.com/127.0.0.1#5353
+server=/zhimg.com/127.0.0.1#5353
+server=/v2ex.com/127.0.0.1#5353
+server=/51cto.com/127.0.0.1#5353
+server=/ifeng.com/127.0.0.1#5353
 server=/toutiao.com/127.0.0.1#5353
 server=/toutiaocdn.com/127.0.0.1#5353
 server=/toutiaocloud.com/127.0.0.1#5353
