--- a/china-domains-dingo.conf
+++ b/china-domains-dingo.conf
@@ -9,6 +9,7 @@ server=/36kr.com/127.0.0.1#5353
 server=/xinhuanet.com/127.0.0.1#5353
 server=/people.com.cn/127.0.0.1#5353
 server=/jd.com/127.0.0.1#5353
+server=/jianshu.com/127.0.0.1#5353
 server=/baidu.com/127.0.0.1#5353
 server=/baiducontent.com/127.0.0.1#5353
 server=/baidupcs.com/127.0.0.1#5353
