--- a/china-domains-dingo.conf
+++ b/china-domains-dingo.conf
@@ -1,5 +1,7 @@
 server=/cn/127.0.0.1#5353
-server=/gov.cn/127.0.0.1#5353
+server=/alibabadns.com/127.0.0.1#5353
+server=/alipay.com/127.0.0.1#5353
+server=/tbcache.com/127.0.0.1#5353
 server=/taobao.com/127.0.0.1#5353
 server=/tmall.com/127.0.0.1#5353
 server=/163.com/127.0.0.1#5353
@@ -7,8 +9,8 @@ server=/163yun.com/127.0.0.1#5353
 server=/126.com/127.0.0.1#5353
 server=/36kr.com/127.0.0.1#5353
 server=/xinhuanet.com/127.0.0.1#5353
-server=/people.com.cn/127.0.0.1#5353
 server=/jd.com/127.0.0.1#5353
+server=/jdcdn.com/127.0.0.1#5353
 server=/jianshu.com/127.0.0.1#5353
 server=/baidu.com/127.0.0.1#5353
 server=/baiducontent.com/127.0.0.1#5353
@@ -41,30 +43,24 @@ server=/ixgvideo.com/127.0.0.1#5353
 server=/365yg.com/127.0.0.1#5353
 server=/douyu.tv/127.0.0.1#5353
 server=/douyu.com/127.0.0.1#5353
-server=/douyucdn.cn/127.0.0.1#5353
 server=/sina.com/127.0.0.1#5353
-server=/sinaimg.cn/127.0.0.1#5353
-server=/sina.com.cn/127.0.0.1#5353
-server=/sinajs.cn/127.0.0.1#5353
-server=/sina.cn/127.0.0.1#5353
 server=/sinaapp.com/127.0.0.1#5353
 server=/weibo.com/127.0.0.1#5353
-server=/weibo.com.cn/127.0.0.1#5353
 server=/sinaedge.com/127.0.0.1#5353
 server=/sinaimg.com/127.0.0.1#5353
 server=/sinajs.com/127.0.0.1#5353
-server=/gtimg.cn/127.0.0.1#5353
 server=/gtimg.com/127.0.0.1#5353
 server=/gtimg.com.cn/127.0.0.1#5353
 server=/imqq.com/127.0.0.1#5353
 server=/myapp.com/127.0.0.1#5353
 server=/qcloud.com/127.0.0.1#5353
 server=/qcloudimg.com/127.0.0.1#5353
-server=/qpic.cn/127.0.0.1#5353
 server=/qq.com/127.0.0.1#5353
 server=/qqmail.com/127.0.0.1#5353
 server=/wechat.com/127.0.0.1#5353
 server=/smtcdns.com/127.0.0.1#5353
 server=/wegame.com/127.0.0.1#5353
 server=/weiyun.com/127.0.0.1#5353
+server=/weixin.com/127.0.0.1#5353
 server=/tenpay.com/127.0.0.1#5353
+server=/txcdn.com/127.0.0.1#5353
