--- a/china-domains-dingo.conf
+++ b/china-domains-dingo.conf
@@ -12,6 +12,10 @@ server=/xinhuanet.com/127.0.0.1#5353
 server=/jd.com/127.0.0.1#5353
 server=/jdcdn.com/127.0.0.1#5353
 server=/jianshu.com/127.0.0.1#5353
+server=/bilibili.com/127.0.0.1#5353
+server=/biliapi.com/127.0.0.1#5353
+server=/biliapi.net/127.0.0.1#5353
+server=/mincdn.com/127.0.0.1#5353
 server=/baidu.com/127.0.0.1#5353
 server=/baiducontent.com/127.0.0.1#5353
 server=/baidupcs.com/127.0.0.1#5353
