--- a/ocserv.conf
+++ b/ocserv.conf
@@ -67,9 +67,9 @@ route = 12.0.0.0/254.0.0.0
 route = 16.0.0.0/248.0.0.0
 route = 24.0.0.0/254.0.0.0
 route = 26.0.0.0/255.0.0.0
-route = 27.0.0.0/255.128.0.0
-route = 27.128.0.0/255.192.0.0
-route = 27.224.0.0/255.224.0.0
+#route = 27.0.0.0/255.128.0.0
+#route = 27.128.0.0/255.192.0.0
+#route = 27.224.0.0/255.224.0.0
 route = 28.0.0.0/252.0.0.0
 route = 32.0.0.0/252.0.0.0
 route = 36.0.0.0/255.192.0.0
