--- a/ocserv.conf
+++ b/ocserv.conf
@@ -1,7 +1,7 @@
 auth = "certificate"
 
 tcp-port = 443
-udp-port = 443
+udp-port = 40403
 
 server-cert = /etc/ocserv/server-cert.pem
 server-key = /etc/ocserv/server-key.pem
@@ -32,10 +32,10 @@ deny-roaming = false
 rekey-time = 172800
 rekey-method = ssl
 
-try-mtu-discovery = false
+try-mtu-discovery = true
 compression = false
 #no-compress-limit = 256
-output-buffer = 500
+output-buffer = 50
 #use-utmp = true
 #use-occtl = true
 predictable-ips = true
