--- a/ocserv.conf
+++ b/ocserv.conf
@@ -32,7 +32,7 @@ deny-roaming = false
 rekey-time = 172800
 rekey-method = ssl
 
-try-mtu-discovery = true
+try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
 output-buffer = 50
