--- a/wg0.conf
+++ b/wg0.conf
@@ -1,7 +1,8 @@
 [Interface]
 PrivateKey = YM1ktOPrdzW7bABxoJaA1zvK/zeMPWsK0uqrGNw/TUw=
+Address = 192.168.88.1/24
 ListenPort = 44210
 
 [Peer]
 PublicKey = sLzPfqYxBLQ5wczB+hPi34eSBIPdvbdFd/JKEpkzHTs=
-AllowedIPs = 192.168.88.2/32
+AllowedIPs = 192.168.88.0/24
