--- a/wg0.conf
+++ b/wg0.conf
@@ -1,8 +1,17 @@
 [Interface]
 PrivateKey = YM1ktOPrdzW7bABxoJaA1zvK/zeMPWsK0uqrGNw/TUw=
-Address = 192.168.88.1/24
+Address = 192.168.88.1/32
 ListenPort = 44210
 
 [Peer]
 PublicKey = sLzPfqYxBLQ5wczB+hPi34eSBIPdvbdFd/JKEpkzHTs=
-AllowedIPs = 192.168.88.0/24
+AllowedIPs = 192.168.88.2/32
+
+[Peer]
+PublicKey = oe3veq5xmUyjeJE7PD0uFlzJuFmFsoJVgZL3gWtc/wo=
+AllowedIPs = 192.168.88.3/32
+
+[Peer]
+PublicKey = /8jZ9OBxrrbels+lgI+6dOPvhvA5qEufRq72yQY8XCA=
+AllowedIPs = 192.168.88.4/32
+
