--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,6 +1,6 @@
 resolv-file = /etc/resolv.dnsmasq.conf
 conf-dir = /etc/dnsmasq.d
-addn-hosts = /etc/dnsmasq-hosts
+#addn-hosts = /etc/dnsmasq-hosts
 strict-order 
 no-hosts
 listen-address = 192.168.18.1,192.168.88.1
