--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,3 +1,4 @@
+#no-resolv
 resolv-file = /etc/resolv.dnsmasq.conf
 conf-dir = /etc/dnsmasq.d
 #addn-hosts = /etc/dnsmasq-hosts
@@ -5,6 +6,5 @@ strict-order
 no-hosts
 listen-address = 192.168.18.1,192.168.88.1
 cache-size = 1000
-#address=/phncdn.com/208.99.84.104
 address=/www.baidu.com/115.239.210.27
 
