--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -6,5 +6,11 @@ strict-order
 no-hosts
 listen-address = 192.168.18.1,192.168.88.1
 cache-size = 1000
+
+server=8.8.8.8
+server=8.8.4.4
+server=1.1.1.1
+server=1.0.0.1
+
 address=/www.baidu.com/115.239.210.27
 
