--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -1,16 +1,88 @@
-#no-resolv
-resolv-file = /etc/resolv.dnsmasq.conf
-conf-dir = /etc/dnsmasq.d
-#addn-hosts = /etc/dnsmasq-hosts
-strict-order 
-no-hosts
 listen-address = 192.168.18.1,192.168.88.1
+no-resolv
+no-hosts
+no-poll
+#addn-hosts = /etc/dnsmasq-hosts
+#resolv-file = /etc/resolv.dnsmasq.conf
+#conf-dir = /etc/dnsmasq.d
+#strict-order 
 cache-size = 1000
 
+address=/www.baidu.com/115.239.210.27
+
+all-servers 
 server=8.8.8.8
 server=8.8.4.4
 server=1.1.1.1
 server=1.0.0.1
 
-address=/www.baidu.com/115.239.210.27
-
+server=/cn/127.0.0.1#5353
+server=/alibabadns.com/127.0.0.1#5353
+server=/alipay.com/127.0.0.1#5353
+server=/tbcache.com/127.0.0.1#5353
+server=/taobao.com/127.0.0.1#5353
+server=/tmall.com/127.0.0.1#5353
+server=/163.com/127.0.0.1#5353
+server=/163yun.com/127.0.0.1#5353
+server=/126.com/127.0.0.1#5353
+server=/36kr.com/127.0.0.1#5353
+server=/xinhuanet.com/127.0.0.1#5353
+server=/jd.com/127.0.0.1#5353
+server=/jdcdn.com/127.0.0.1#5353
+server=/jianshu.com/127.0.0.1#5353
+server=/bilibili.com/127.0.0.1#5353
+server=/biliapi.com/127.0.0.1#5353
+server=/biliapi.net/127.0.0.1#5353
+server=/mincdn.com/127.0.0.1#5353
+server=/baidu.com/127.0.0.1#5353
+server=/baiducontent.com/127.0.0.1#5353
+server=/baidupcs.com/127.0.0.1#5353
+server=/baidustatic.com/127.0.0.1#5353
+server=/baifubao.com/127.0.0.1#5353
+server=/bdimg.com/127.0.0.1#5353
+server=/duapps.com/127.0.0.1#5353
+server=/quyaoya.com/127.0.0.1#5353
+server=/tiebaimg.com/127.0.0.1#5353
+server=/xiaodutv.com/127.0.0.1#5353
+server=/bytecdn.cn/127.0.0.1#5353
+server=/bytedance.com/127.0.0.1#5353
+server=/bytedns.net/127.0.0.1#5353
+server=/douyin.com/127.0.0.1#5353
+server=/douban.com/127.0.0.1#5353
+server=/huaxiong.com/127.0.0.1#5353
+server=/zhihu.com/127.0.0.1#5353
+server=/zhimg.com/127.0.0.1#5353
+server=/v2ex.com/127.0.0.1#5353
+server=/51cto.com/127.0.0.1#5353
+server=/ifeng.com/127.0.0.1#5353
+server=/toutiao.com/127.0.0.1#5353
+server=/toutiaocdn.com/127.0.0.1#5353
+server=/toutiaocloud.com/127.0.0.1#5353
+server=/toutiaopage.com/127.0.0.1#5353
+server=/wukong.com/127.0.0.1#5353
+server=/ixigua.com/127.0.0.1#5353
+server=/ixgvideo.com/127.0.0.1#5353
+server=/365yg.com/127.0.0.1#5353
+server=/douyu.tv/127.0.0.1#5353
+server=/douyu.com/127.0.0.1#5353
+server=/sina.com/127.0.0.1#5353
+server=/sinaapp.com/127.0.0.1#5353
+server=/weibo.com/127.0.0.1#5353
+server=/sinaedge.com/127.0.0.1#5353
+server=/sinaimg.com/127.0.0.1#5353
+server=/sinajs.com/127.0.0.1#5353
+server=/gtimg.com/127.0.0.1#5353
+server=/gtimg.com.cn/127.0.0.1#5353
+server=/imqq.com/127.0.0.1#5353
+server=/myapp.com/127.0.0.1#5353
+server=/qcloud.com/127.0.0.1#5353
+server=/qcloudimg.com/127.0.0.1#5353
+server=/qq.com/127.0.0.1#5353
+server=/qqmail.com/127.0.0.1#5353
+server=/wechat.com/127.0.0.1#5353
+server=/smtcdns.com/127.0.0.1#5353
+server=/wegame.com/127.0.0.1#5353
+server=/weiyun.com/127.0.0.1#5353
+server=/weixin.com/127.0.0.1#5353
+server=/tenpay.com/127.0.0.1#5353
+server=/txcdn.com/127.0.0.1#5353
