--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -9,6 +9,7 @@ no-poll
 cache-size = 1000
 
 address=/www.baidu.com/115.239.210.27
+address=/m.baidu.com/115.239.217.68
 
 all-servers 
 server=8.8.8.8
