--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -14,8 +14,8 @@ address=/m.baidu.com/115.239.217.68
 all-servers 
 server=8.8.8.8
 server=8.8.4.4
-server=1.1.1.1
-server=1.0.0.1
+#server=1.1.1.1
+#server=1.0.0.1
 
 server=/cn/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
