--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -67,6 +67,7 @@ server=/365yg.com/127.0.0.1#5353
 server=/douyu.tv/127.0.0.1#5353
 server=/douyu.com/127.0.0.1#5353
 server=/sina.com/127.0.0.1#5353
+server=/sina.net/127.0.0.1#5353
 server=/sinaapp.com/127.0.0.1#5353
 server=/weibo.com/127.0.0.1#5353
 server=/sinaedge.com/127.0.0.1#5353
