--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -10,6 +10,7 @@ cache-size = 1000
 
 address=/www.baidu.com/115.239.210.27
 address=/m.baidu.com/115.239.217.68
+address=/services.googleapis.cn/172.217.5.202
 
 all-servers 
 server=8.8.8.8
