--- a/wg0.conf
+++ b/wg0.conf
@@ -16,3 +16,9 @@ AllowedIPs = 192.168.88.3/32
 PublicKey = /8jZ9OBxrrbels+lgI+6dOPvhvA5qEufRq72yQY8XCA=
 AllowedIPs = 192.168.88.4/32
 
+[Peer]
+PublicKey = Re+7ruSezEBfWzJ5BfaNuc+0cx1i881kl/uEzkf2Kzs=
+AllowedIPs = 192.168.88.5/32
+
+
+
