--- a/wg0.conf
+++ b/wg0.conf
@@ -2,6 +2,7 @@
 PrivateKey = YM1ktOPrdzW7bABxoJaA1zvK/zeMPWsK0uqrGNw/TUw=
 Address = 192.168.88.1/32
 ListenPort = 44210
+PostUp = ip link set wg0 txqueuelen 5000
 mtu = 1420
 
 [Peer]
