--- a/wg0.conf
+++ b/wg0.conf
@@ -2,7 +2,8 @@
 PrivateKey = YM1ktOPrdzW7bABxoJaA1zvK/zeMPWsK0uqrGNw/TUw=
 Address = 192.168.88.1/32
 ListenPort = 44210
-PostUp = ip link set wg0 txqueuelen 5000
+PostUp = iptables -A FORWARD -i wg0 -j ACCEPT; iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE; ip link set wg0 txqueuelen 5000
+PostDown = iptables -D FORWARD -i wg0 -j ACCEPT; iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
 mtu = 1420
 
 [Peer]
