--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -11,6 +11,7 @@ cache-size = 1000
 address=/www.baidu.com/115.239.210.27
 address=/m.baidu.com/115.239.217.68
 address=/services.googleapis.cn/172.217.5.202
+address=/github-production-release-asset-2e65be.s3.amazonaws.com/52.216.224.16
 
 all-servers 
 server=8.8.8.8
