--- a/wg0.conf
+++ b/wg0.conf
@@ -3,25 +3,30 @@ PrivateKey = YM1ktOPrdzW7bABxoJaA1zvK/zeMPWsK0uqrGNw/TUw=
 Address = 192.168.88.1/32
 ListenPort = 44210
 PostUp = ip link set eth0 txqueuelen 5000; ip link set wg0 txqueuelen 5000
-#PostUp = iptables -A FORWARD -i wg0 -j ACCEPT; iptables -t nat -A POSTROUTING -o eth0 -j MASQUERADE; ip link set wg0 txqueuelen 5000
-#PostDown = iptables -D FORWARD -i wg0 -j ACCEPT; iptables -t nat -D POSTROUTING -o eth0 -j MASQUERADE
 mtu = 1420
 
+#home-pc
 [Peer]
 PublicKey = sLzPfqYxBLQ5wczB+hPi34eSBIPdvbdFd/JKEpkzHTs=
 AllowedIPs = 192.168.88.2/32
+PersistentKeepalive = 25
 
+#office-pc
 [Peer]
 PublicKey = oe3veq5xmUyjeJE7PD0uFlzJuFmFsoJVgZL3gWtc/wo=
 AllowedIPs = 192.168.88.3/32
+PersistentKeepalive = 25
 
+#phone
 [Peer]
 PublicKey = /8jZ9OBxrrbels+lgI+6dOPvhvA5qEufRq72yQY8XCA=
 AllowedIPs = 192.168.88.4/32
 
+#notebook
 [Peer]
 PublicKey = Re+7ruSezEBfWzJ5BfaNuc+0cx1i881kl/uEzkf2Kzs=
 AllowedIPs = 192.168.88.5/32
+PersistentKeepalive = 25
 
 
 
