--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -37,6 +37,10 @@ server=/bilibili.com/127.0.0.1#5353
 server=/biliapi.com/127.0.0.1#5353
 server=/biliapi.net/127.0.0.1#5353
 server=/mincdn.com/127.0.0.1#5353
+server=/im9.com/127.0.0.1#5353
+server=/acg.tv/127.0.0.1#5353
+server=/hdslb.com/127.0.0.1#5353
+server=/b23.tv/127.0.0.1#5353
 server=/baidu.com/127.0.0.1#5353
 server=/baiducontent.com/127.0.0.1#5353
 server=/baidupcs.com/127.0.0.1#5353
