--- a/dingo.service
+++ b/dingo.service
@@ -5,7 +5,7 @@ Wants=network.target
 [Service]
 Type=simple
 ExecStart=/usr/bin/dingo -port 5353 -gdns:auto -gdns:edns 202.102.192.0 -gdns:workers 5
-#ExecStart=/usr/bin/dingo -port 5353 -gdns:server 8.8.8.8 -gdns:host dns.google -gdns:edns 202.102.192.0
+#ExecStart=/usr/bin/dingo -port 5353 -gdns:server 8.8.8.8 -gdns:sni dns.google -gdns:edns 202.102.192.0
 ExecReload=/bin/kill -HUP $MAINPID
 Restart=on-abort
 StandardOutput=null
