--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -8,8 +8,8 @@ no-poll
 #strict-order 
 cache-size = 1000
 
-address=/www.baidu.com/115.239.210.27
-address=/m.baidu.com/115.239.217.68
+#address=/www.baidu.com/115.239.210.27
+#address=/m.baidu.com/115.239.217.68
 address=/services.googleapis.cn/172.217.5.202
 #address=/github-production-release-asset-2e65be.s3.amazonaws.com/52.216.224.16
 
@@ -45,6 +45,7 @@ server=/baidu.com/127.0.0.1#5353
 server=/baiducontent.com/127.0.0.1#5353
 server=/baidupcs.com/127.0.0.1#5353
 server=/baidustatic.com/127.0.0.1#5353
+server=/bdstatic.com/127.0.0.1#5353
 server=/baifubao.com/127.0.0.1#5353
 server=/bdimg.com/127.0.0.1#5353
 server=/duapps.com/127.0.0.1#5353
