--- a/wg0.conf
+++ b/wg0.conf
@@ -1,7 +1,7 @@
 [Interface]
 PrivateKey = YM1ktOPrdzW7bABxoJaA1zvK/zeMPWsK0uqrGNw/TUw=
-Address = 192.168.88.1/32
-ListenPort = 44210
+Address = 192.168.88.1/24
+ListenPort = 440
 PostUp = ip link set eth0 txqueuelen 5000; ip link set wg0 txqueuelen 5000
 mtu = 1420
 
@@ -9,13 +9,13 @@ mtu = 1420
 [Peer]
 PublicKey = sLzPfqYxBLQ5wczB+hPi34eSBIPdvbdFd/JKEpkzHTs=
 AllowedIPs = 192.168.88.2/32
-PersistentKeepalive = 25
+#PersistentKeepalive = 25
 
 #office-pc
 [Peer]
 PublicKey = oe3veq5xmUyjeJE7PD0uFlzJuFmFsoJVgZL3gWtc/wo=
 AllowedIPs = 192.168.88.3/32
-PersistentKeepalive = 25
+#PersistentKeepalive = 25
 
 #phone
 [Peer]
@@ -26,7 +26,7 @@ AllowedIPs = 192.168.88.4/32
 [Peer]
 PublicKey = Re+7ruSezEBfWzJ5BfaNuc+0cx1i881kl/uEzkf2Kzs=
 AllowedIPs = 192.168.88.5/32
-PersistentKeepalive = 25
+#PersistentKeepalive = 25
 
 
 
