--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -22,6 +22,7 @@ server=8.8.4.4
 server=/cn/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
 server=/alipay.com/127.0.0.1#5353
+server=/chinanews.com/127.0.0.1#5353
 server=/cnblogs.com/127.0.0.1#5353
 server=/tbcache.com/127.0.0.1#5353
 server=/taobao.com/127.0.0.1#5353
