--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -23,7 +23,7 @@ server=/cn/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
 server=/alipay.com/127.0.0.1#5353
 server=/alicdn.com/127.0.0.1#5353
-#server=/alikunlun.net/127.0.0.1#5353
+server=/alikunlun.net/127.0.0.1#5353
 server=/chinanews.com/127.0.0.1#5353
 server=/cnblogs.com/127.0.0.1#5353
 server=/tbcache.com/127.0.0.1#5353
@@ -62,6 +62,8 @@ server=/bytedns.net/127.0.0.1#5353
 server=/douyin.com/127.0.0.1#5353
 server=/douban.com/127.0.0.1#5353
 server=/huaxiong.com/127.0.0.1#5353
+server=/pstatp.com/127.0.0.1#5353
+server=/snssdk.com/127.0.0.1#5353
 server=/zhihu.com/127.0.0.1#5353
 server=/zhimg.com/127.0.0.1#5353
 server=/v2ex.com/127.0.0.1#5353
