--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -16,8 +16,7 @@ address=/services.googleapis.cn/172.217.5.202
 all-servers 
 server=8.8.8.8
 server=8.8.4.4
-#server=1.1.1.1
-#server=1.0.0.1
+#server=127.0.0.1#5300
 
 server=/cn/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
