--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -14,9 +14,9 @@ address=/services.googleapis.cn/172.217.5.202
 #address=/github-production-release-asset-2e65be.s3.amazonaws.com/52.216.224.16
 
 all-servers 
-server=8.8.8.8
-server=8.8.4.4
-#server=127.0.0.1#5300
+#server=8.8.8.8
+#server=8.8.4.4
+server=127.0.0.1#5300
 
 server=/cn/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
