--- a/recursor.conf
+++ b/recursor.conf
@@ -1,6 +1,9 @@
 allow-from=192.168.18.0/24;192.168.88.0/24
+ecs-add-for=202.102.192.0/24
+edns-subnet-whitelist=
 local-address=127.0.0.1,192.168.18.1,192.168.88.1
 local-port=53
 daemon=yes
 #forward-zones-file=/etc/powerdns/forward-zone.conf
 forward-zones-recurse=.=8.8.8.8;8.8.4.4
+
