--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -100,3 +100,5 @@ server=/weiyun.com/127.0.0.1#5353
 server=/weixin.com/127.0.0.1#5353
 server=/tenpay.com/127.0.0.1#5353
 server=/txcdn.com/127.0.0.1#5353
+server=/huanqiu.com/127.0.0.1#5353
+server=/zlibs.com/127.0.0.1#5353
