--- a/recursor.conf
+++ b/recursor.conf
@@ -6,87 +6,86 @@ local-port=53
 daemon=yes
 #forward-zones-file=/etc/powerdns/forward-zone.conf
 forward-zones-recurse=.=8.8.8.8;8.8.4.4
-edns-subnet-whitelist=cn,alibabadns.com,alipay.com,alicdn.com,alikunlun.net,chinanews.com,cnblogs.com,tbcache.com,taobao.com,tmall.com,163.com,163yun.com,
-
-server=/cn/127.0.0.1#5353
-server=/alibabadns.com/127.0.0.1#5353
-server=/alipay.com/127.0.0.1#5353
-server=/alicdn.com/127.0.0.1#5353
-server=/alikunlun.net/127.0.0.1#5353
-server=/chinanews.com/127.0.0.1#5353
-server=/cnblogs.com/127.0.0.1#5353
-server=/tbcache.com/127.0.0.1#5353
-server=/taobao.com/127.0.0.1#5353
-server=/tmall.com/127.0.0.1#5353
-server=/163.com/127.0.0.1#5353
-server=/163yun.com/127.0.0.1#5353
-server=/126.com/127.0.0.1#5353
-server=/36kr.com/127.0.0.1#5353
-server=/xinhuanet.com/127.0.0.1#5353
-server=/jd.com/127.0.0.1#5353
-server=/jdcdn.com/127.0.0.1#5353
-server=/jianshu.com/127.0.0.1#5353
-server=/bilibili.com/127.0.0.1#5353
-server=/biliapi.com/127.0.0.1#5353
-server=/biliapi.net/127.0.0.1#5353
-server=/mincdn.com/127.0.0.1#5353
-server=/im9.com/127.0.0.1#5353
-server=/acg.tv/127.0.0.1#5353
-server=/hdslb.com/127.0.0.1#5353
-server=/b23.tv/127.0.0.1#5353
-server=/baidu.com/127.0.0.1#5353
-server=/baiducontent.com/127.0.0.1#5353
-server=/baidupcs.com/127.0.0.1#5353
-server=/baidustatic.com/127.0.0.1#5353
-server=/bdstatic.com/127.0.0.1#5353
-server=/baifubao.com/127.0.0.1#5353
-server=/bdimg.com/127.0.0.1#5353
-server=/duapps.com/127.0.0.1#5353
-server=/quyaoya.com/127.0.0.1#5353
-server=/tiebaimg.com/127.0.0.1#5353
-server=/xiaodutv.com/127.0.0.1#5353
-server=/bytecdn.cn/127.0.0.1#5353
-server=/bytedance.com/127.0.0.1#5353
-server=/bytedns.net/127.0.0.1#5353
-server=/douyin.com/127.0.0.1#5353
-server=/douban.com/127.0.0.1#5353
-server=/huaxiong.com/127.0.0.1#5353
-server=/pstatp.com/127.0.0.1#5353
-server=/snssdk.com/127.0.0.1#5353
-server=/zhihu.com/127.0.0.1#5353
-server=/zhimg.com/127.0.0.1#5353
-server=/v2ex.com/127.0.0.1#5353
-server=/51cto.com/127.0.0.1#5353
-server=/ifeng.com/127.0.0.1#5353
-server=/toutiao.com/127.0.0.1#5353
-server=/toutiaocdn.com/127.0.0.1#5353
-server=/toutiaocloud.com/127.0.0.1#5353
-server=/toutiaopage.com/127.0.0.1#5353
-server=/wukong.com/127.0.0.1#5353
-server=/ixigua.com/127.0.0.1#5353
-server=/ixgvideo.com/127.0.0.1#5353
-server=/365yg.com/127.0.0.1#5353
-server=/douyu.tv/127.0.0.1#5353
-server=/douyu.com/127.0.0.1#5353
-server=/sina.com/127.0.0.1#5353
-server=/sina.net/127.0.0.1#5353
-server=/sinaapp.com/127.0.0.1#5353
-server=/weibo.com/127.0.0.1#5353
-server=/sinaedge.com/127.0.0.1#5353
-server=/sinaimg.com/127.0.0.1#5353
-server=/sinajs.com/127.0.0.1#5353
-server=/gtimg.com/127.0.0.1#5353
-server=/gtimg.com.cn/127.0.0.1#5353
-server=/imqq.com/127.0.0.1#5353
-server=/myapp.com/127.0.0.1#5353
-server=/qcloud.com/127.0.0.1#5353
-server=/qcloudimg.com/127.0.0.1#5353
-server=/qq.com/127.0.0.1#5353
-server=/qqmail.com/127.0.0.1#5353
-server=/wechat.com/127.0.0.1#5353
-server=/smtcdns.com/127.0.0.1#5353
-server=/wegame.com/127.0.0.1#5353
-server=/weiyun.com/127.0.0.1#5353
-server=/weixin.com/127.0.0.1#5353
-server=/tenpay.com/127.0.0.1#5353
-server=/txcdn.com/127.0.0.1#5353
+edns-subnet-whitelist=cn,\
+      alibabadns.com,\
+      alipay.com,\
+      alicdn.com,\
+      alikunlun.net,\
+      chinanews.com,\
+      cnblogs.com,\
+      tbcache.com,\
+      taobao.com,\
+      tmall.com,\
+      163.com,\
+      163yun.com,\
+      126.com,\
+      36kr.com,\
+      xinhuanet.com,\
+      jd.com,\
+      jdcdn.com,\
+      jianshu.com,\
+      bilibili.com,\
+      biliapi.com,\
+      biliapi.net,\
+      mincdn.com,\
+      im9.com,\
+      acg.tv,\
+      hdslb.com,\
+      b23.tv,\
+      baidu.com,\
+      baiducontent.com,\
+      baidupcs.com,\
+      baidustatic.com,\
+      bdstatic.com,\
+      baifubao.com,\
+      bdimg.com,\
+      duapps.com,\
+      quyaoya.com,\
+      tiebaimg.com,\
+      xiaodutv.com,\
+      bytecdn.cn,\
+      bytedance.com,\
+      bytedns.net,\
+      douyin.com,\
+      douban.com,\
+      huaxiong.com,\
+      pstatp.com,\
+      snssdk.com,\
+      zhihu.com,\
+      zhimg.com,\
+      v2ex.com,\
+      51cto.com,\
+      ifeng.com,\
+      toutiao.com,\
+      toutiaocdn.com,\
+      toutiaocloud.com,\
+      toutiaopage.com,\
+      wukong.com,\
+      ixigua.com,\
+      ixgvideo.com,\
+      365yg.com,\
+      douyu.tv,\
+      douyu.com,\
+      sina.com,\
+      sina.net,\
+      sinaapp.com,\
+      weibo.com,\
+      sinaedge.com,\
+      sinaimg.com,\
+      sinajs.com,\
+      gtimg.com,\
+      gtimg.com.cn,\
+      imqq.com,\
+      myapp.com,\
+      qcloud.com,\
+      qcloudimg.com,\
+      qq.com,\
+      qqmail.com,\
+      wechat.com,\
+      smtcdns.com,\
+      wegame.com,\
+      weiyun.com,\
+      weixin.com,\
+      tenpay.com,\
+      txcdn.com,\
+      huanqiu.com,\
