--- a/recursor.conf
+++ b/recursor.conf
@@ -1,12 +1,12 @@
 allow-from=192.168.18.0/24;192.168.88.0/24
 ecs-add-for=202.102.192.0/24
-
 local-address=127.0.0.1,192.168.18.1,192.168.88.1
 local-port=53
 daemon=yes
 #forward-zones-file=/etc/powerdns/forward-zone.conf
 forward-zones-recurse=.=8.8.8.8;8.8.4.4
-edns-subnet-whitelist=cn,\
+edns-subnet-whitelist=\
+      cn,\
       alibabadns.com,\
       alipay.com,\
       alicdn.com,\
