--- a/recursor.conf
+++ b/recursor.conf
@@ -63,30 +63,4 @@ edns-subnet-whitelist=\
       wukong.com,\
       ixigua.com,\
       ixgvideo.com,\
-      365yg.com,\
-      douyu.tv,\
-      douyu.com,\
-      sina.com,\
-      sina.net,\
-      sinaapp.com,\
-      weibo.com,\
-      sinaedge.com,\
-      sinaimg.com,\
-      sinajs.com,\
-      gtimg.com,\
-      gtimg.com.cn,\
-      imqq.com,\
-      myapp.com,\
-      qcloud.com,\
-      qcloudimg.com,\
-      qq.com,\
-      qqmail.com,\
-      wechat.com,\
-      smtcdns.com,\
-      wegame.com,\
-      weiyun.com,\
-      weixin.com,\
-      tenpay.com,\
-      txcdn.com,\
-      huanqiu.com,\
-      zlibs.com
+      365yg.com,douyu.tv,douyu.com,sina.com,sina.net,sinaapp.com,weibo.com,sinaedge.c,sinaimg.com,sinajs.com,gtimg.com,gtimg.com.cn,imqq.com,myapp.com,qcloud.com,qcloudimg.com,qq.com,qqmail.com,wechat.com,smtcdns.com,wegame.com,weiyun.com,weixin.com,tenpay.com,txcdn.com,huanqiu.com,zlibs.com
