--- a/recursor.conf
+++ b/recursor.conf
@@ -5,62 +5,4 @@ local-port=53
 daemon=yes
 #forward-zones-file=/etc/powerdns/forward-zone.conf
 forward-zones-recurse=.=8.8.8.8;8.8.4.4
-edns-subnet-whitelist=\
-      cn,\
-      alibabadns.com,\
-      alipay.com,\
-      alicdn.com,\
-      alikunlun.net,\
-      chinanews.com,\
-      cnblogs.com,\
-      tbcache.com,\
-      taobao.com,\
-      tmall.com,\
-      163.com,\
-      163yun.com,\
-      126.com,\
-      36kr.com,\
-      xinhuanet.com,\
-      jd.com,\
-      jdcdn.com,\
-      jianshu.com,\
-      bilibili.com,\
-      biliapi.com,\
-      biliapi.net,\
-      mincdn.com,\
-      im9.com,\
-      acg.tv,\
-      hdslb.com,\
-      b23.tv,\
-      baidu.com,\
-      baiducontent.com,\
-      baidupcs.com,\
-      baidustatic.com,\
-      bdstatic.com,\
-      baifubao.com,\
-      bdimg.com,\
-      duapps.com,\
-      quyaoya.com,\
-      tiebaimg.com,\
-      xiaodutv.com,\
-      bytecdn.cn,\
-      bytedance.com,\
-      bytedns.net,\
-      douyin.com,\
-      douban.com,\
-      huaxiong.com,\
-      pstatp.com,\
-      snssdk.com,\
-      zhihu.com,\
-      zhimg.com,\
-      v2ex.com,\
-      51cto.com,\
-      ifeng.com,\
-      toutiao.com,\
-      toutiaocdn.com,\
-      toutiaocloud.com,\
-      toutiaopage.com,\
-      wukong.com,\
-      ixigua.com,\
-      ixgvideo.com,\
-      365yg.com,douyu.tv,douyu.com,sina.com,sina.net,sinaapp.com,weibo.com,sinaedge.c,sinaimg.com,sinajs.com,gtimg.com,gtimg.com.cn,imqq.com,myapp.com,qcloud.com,qcloudimg.com,qq.com,qqmail.com,wechat.com,smtcdns.com,wegame.com,weiyun.com,weixin.com,tenpay.com,txcdn.com,huanqiu.com,zlibs.com
+edns-subnet-whitelist=cn,alibabadns.com,alipay.com,alicdn.com,alikunlun.net,chinanews.com,cnblogs.com,tbcache.com,taobao.com,tmall.com,163.com,163yun.com,126.com,36kr.com,xinhuanet.com,jd.com,jdcdn.com,jianshu.com,bilibili.com,biliapi.com,biliapi.net,mincdn.com,im9.com,acg.tv,hdslb.com,b23.tv,baidu.com,baiducontent.com,baidupcs.com,baidustatic.com,bdstatic.com,baifubao.com,bdimg.com,duapps.com,quyaoya.com,tiebaimg.com,xiaodutv.com,bytecdn.cn,bytedance.com,bytedns.net,douyin.com,douban.com,huaxiong.com,pstatp.com,snssdk.com,zhihu.com,zhimg.com,v2ex.com,51cto.com,ifeng.com,toutiao.com,toutiaocdn.com,toutiaocloud.com,toutiaopage.com,wukong.com,ixigua.com,ixgvideo.com,365yg.com,douyu.tv,douyu.com,sina.com,sina.net,sinaapp.com,weibo.com,sinaedge.com,sinaimg.com,sinajs.com,gtimg.com,gtimg.com.cn,imqq.com,myapp.com,qcloud.com,qcloudimg.com,qq.com,qqmail.com,wechat.com,smtcdns.com,wegame.com,weiyun.com,weixin.com,tenpay.com,txcdn.com,huanqiu.com,zlibs.com
