--- a/recursor.conf
+++ b/recursor.conf
@@ -1,4 +1,4 @@
-allow-from=192.168.18.0/24;192.168.88.0/24
+allow-from=192.168.18.0/24,192.168.88.0/24
 ecs-add-for=202.102.192.0/24
 local-address=127.0.0.1,192.168.18.1,192.168.88.1
 local-port=53
