--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -52,6 +52,9 @@ server=/bdstatic.com/127.0.0.1#5353
 server=/baifubao.com/127.0.0.1#5353
 server=/bdimg.com/127.0.0.1#5353
 server=/duapps.com/127.0.0.1#5353
+server=/qiyi.com/127.0.0.1#5353
+server=/qiyipic.com/127.0.0.1#5353
+server=/iqiyi.com/127.0.0.1#5353
 server=/quyaoya.com/127.0.0.1#5353
 server=/tiebaimg.com/127.0.0.1#5353
 server=/xiaodutv.com/127.0.0.1#5353
