--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -18,7 +18,7 @@ all-servers
 #server=8.8.4.4
 server=127.0.0.1#5300
 server=/services.googleapis.cn/127.0.0.1#5300
-
+server=/phncdn.com/127.0.0.1#5353
 server=/cn/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
 server=/alipay.com/127.0.0.1#5353
