--- a/ocserv.conf
+++ b/ocserv.conf
@@ -226,7 +226,7 @@ route = 219.160.0.0/255.224.0.0
 route = 219.192.0.0/255.192.0.0
 route = 220.0.0.0/255.128.0.0
 route = 220.128.0.0/255.224.0.0
-#route = 221.0.0.0/255.0.0.0 （主要是japan）
+#route = 221.0.0.0/255.0.0.0 （japan korea china）
 route = 222.0.0.0/255.224.0.0
 route = 222.96.0.0/255.224.0.0
 route = 222.224.0.0/255.224.0.0
