--- a/ocserv.conf
+++ b/ocserv.conf
@@ -228,6 +228,7 @@ route = 184.0.0.0/248.0.0.0
 route = 192.0.0.0/255.128.0.0
 route = 192.128.0.0/255.224.0.0
 route = 192.160.0.0/255.248.0.0
+route = 192.168.0.0/255.255.0.0
 route = 192.169.0.0/255.255.0.0
 route = 192.170.0.0/255.254.0.0
 route = 192.172.0.0/255.252.0.0
@@ -250,7 +251,6 @@ route = 219.160.0.0/255.224.0.0
 route = 219.192.0.0/255.192.0.0
 route = 220.0.0.0/255.128.0.0
 route = 220.128.0.0/255.224.0.0
-#route = 221.0.0.0/255.0.0.0 （japan korea china）
 route = 222.0.0.0/255.224.0.0
 route = 222.96.0.0/255.224.0.0
 route = 222.224.0.0/255.224.0.0
