--- a/wg-client-allowedips.conf
+++ b/wg-client-allowedips.conf
@@ -1,3 +1,7 @@
+# wireguard 客户端 AllowedIPs 用于配置系统路由表。
+# 可以使用多个AllowedIPs，或者用,分割的字符串。如 AllowedIPs = 0.0.0.0/5,8.0.0.0/7
+# AllowedIPs 范围根据 VPS 位置确定，如在美国，考虑以美国、西欧网段为主；如在亚洲，则需要配合dns解析，考虑以日韩港台新为主。
+
 AllowedIPs = 0.0.0.0/5
 AllowedIPs = 8.0.0.0/7
 AllowedIPs = 11.0.0.0/8
