--- a/wg-client-allowedips.conf
+++ b/wg-client-allowedips.conf
@@ -1,6 +1,12 @@
 # wireguard 客户端 AllowedIPs 用于配置系统路由表。
 # 可以使用多个AllowedIPs，或者用,分割的字符串。如 AllowedIPs = 0.0.0.0/5,8.0.0.0/7
-# AllowedIPs 范围根据 VPS 位置确定，如在美国，考虑以美国、西欧网段为主；如在亚洲，则需要配合dns解析，考虑以日韩港台新为主。
+# AllowedIPs 范围根据 VPS 位置,配合 DNS 解析确定，如在美国，考虑以美国、西欧网段为主；如在亚洲，考虑以日韩港台新为主。
+# DNS 解析以google 8.8.8.8 为服务器，结合其支持的 edns-client-subnet，
+# 如境外网站，以 VPS 附近 IP 地址为 edns-client-subnet,获取与 VPS 地理位置最近的 CDN 地址。
+# 如国内网站，以 ISP DNS  IP 地址为 edns-client-subnet,获取与 ISP 地理位置最近的 CDN 地址。
+
+
+
 
 AllowedIPs = 0.0.0.0/5
 AllowedIPs = 8.0.0.0/7
