--- a/wg-client-allowedips.conf
+++ b/wg-client-allowedips.conf
@@ -1,11 +1,14 @@
-# wireguard 客户端 AllowedIPs 用于配置系统路由表。
+# wireguard 客户端 AllowedIPs 是需要通过 vpn 访问的 ip 网段，用于客户端程序设置系统路由表。
 # 可以使用多个AllowedIPs，或者用,分割的字符串。如 AllowedIPs = 0.0.0.0/5,8.0.0.0/7
 # AllowedIPs 范围根据 VPS 位置,配合 DNS 解析确定，如在美国，考虑以美国、西欧网段为主；如在亚洲，考虑以日韩港台新为主。
-# DNS 解析以google 8.8.8.8 为服务器，结合其支持的 edns-client-subnet，
+# DNS 解析以 google 8.8.8.8，8.8.4.4 为服务器，结合其支持的 edns-client-subnet，对境内、境外网站分别解析。
 # 如境外网站(默认)，以 VPS 附近 IP 地址为 edns-client-subnet,获取与 VPS 地理位置最近的 CDN 地址。
 # 如国内网站（域名列表），以 ISP DNS  IP 地址为 edns-client-subnet,获取与 ISP 地理位置最近的 CDN 地址。
 # 域名列表主要包括国内大型网站，在境外有cdn，其他小网站无论设置edns-client-subnet,解析地址都是一样。
-# AllowedIPs 根据经常访问的国内网站进行动态调整，需要配合 dns.google,ipip.net等获取域名解析、IP地址位置等信息对国内网站进行优化。
+# AllowedIPs 肯定不够精细，如发现境外网站不能访问，在AllowedIPs 增加相关网段。
+# 如发现访问国内网站较慢，在资源监视器中看到绕道 vpn 访问。通过 dns.google,ipip.net等获取域名解析、IP地址位置等信息对国内网站进行优化。
+# 一种是属于有境外cdn的国内网站，则将该网站添加到域名列表，解析为国内ip地址，再修改  AllowedIPs 不包括该网段。
+# 一种是无境外cdn的国内网站，只有国内 IP 地址，修改 AllowedIPs 不包括该网段。
 
 AllowedIPs = 0.0.0.0/5
 AllowedIPs = 8.0.0.0/7
