--- a/wg-client-allowedips.conf
+++ b/wg-client-allowedips.conf
@@ -113,7 +113,8 @@ AllowedIPs = 124.144.0.0/12
 AllowedIPs = 124.144.0.0/12
 AllowedIPs = 124.168.0.0/14
 AllowedIPs = 124.176.0.0/12
-
+AllowedIPs = 124.208.0.0/13
+AllowedIPs = 124.216.0.0/14
 AllowedIPs = 125.0.0.0/10
 AllowedIPs = 125.96.0.0/11
 AllowedIPs = 125.128.0.0/9
