--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -32,6 +32,10 @@ server=/tmall.com/127.0.0.1#5353
 server=/163.com/127.0.0.1#5353
 server=/163yun.com/127.0.0.1#5353
 server=/126.com/127.0.0.1#5353
+server=/126.net/127.0.0.1#5353
+server=/127.net/127.0.0.1#5353
+server=/163.net/127.0.0.1#5353
+server=/360buyimg.com/127.0.0.1#5353
 server=/36kr.com/127.0.0.1#5353
 server=/xinhuanet.com/127.0.0.1#5353
 server=/jd.com/127.0.0.1#5353
