--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -67,6 +67,7 @@ server=/xiaodutv.com/127.0.0.1#5353
 server=/bytecdn.cn/127.0.0.1#5353
 server=/bytedance.com/127.0.0.1#5353
 server=/bytedns.net/127.0.0.1#5353
+server=/byteimg.com/127.0.0.1#5353
 server=/douyin.com/127.0.0.1#5353
 server=/douban.com/127.0.0.1#5353
 server=/huaxiong.com/127.0.0.1#5353
