--- a/wg-client-allowedips.conf
+++ b/wg-client-allowedips.conf
@@ -70,6 +70,9 @@ AllowedIPs = 58.136.0.0/13
 AllowedIPs = 58.145.0.0/16
 AllowedIPs = 58.146.0.0/15
 AllowedIPs = 58.148.0.0/14
+AllowedIPs = 58.156.0.0/14
+AllowedIPs = 58.160.0.0/11
+AllowedIPs = 58.224.0.0/12
 
 AllowedIPs = 58.224.0.0/11
 AllowedIPs = 59.0.0.0/11
