--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -26,6 +26,7 @@ server=/alicdn.com/127.0.0.1#5353
 server=/alikunlun.net/127.0.0.1#5353
 server=/chinanews.com/127.0.0.1#5353
 server=/cnblogs.com/127.0.0.1#5353
+server=/cctv.com/127.0.0.1#5353
 server=/tbcache.com/127.0.0.1#5353
 server=/taobao.com/127.0.0.1#5353
 server=/tmall.com/127.0.0.1#5353
@@ -35,6 +36,7 @@ server=/126.com/127.0.0.1#5353
 server=/126.net/127.0.0.1#5353
 server=/127.net/127.0.0.1#5353
 server=/163.net/127.0.0.1#5353
+server=/netease.com/127.0.0.1#5353
 server=/360buyimg.com/127.0.0.1#5353
 server=/36kr.com/127.0.0.1#5353
 server=/xinhuanet.com/127.0.0.1#5353
