--- a/dnsmasq.conf
+++ b/dnsmasq.conf
@@ -22,11 +22,15 @@ server=/phncdn.com/127.0.0.1#5353
 server=/cn/127.0.0.1#5353
 server=/alibabadns.com/127.0.0.1#5353
 server=/alipay.com/127.0.0.1#5353
+server=/alipayobjects.com/127.0.0.1#5353
 server=/alicdn.com/127.0.0.1#5353
 server=/alikunlun.net/127.0.0.1#5353
 server=/chinanews.com/127.0.0.1#5353
 server=/cnblogs.com/127.0.0.1#5353
 server=/cctv.com/127.0.0.1#5353
+server=/cctvpic.com/127.0.0.1#5353
+server=/ipanda.com/127.0.0.1#5353
+server=/livechina.com/127.0.0.1#5353
 server=/tbcache.com/127.0.0.1#5353
 server=/taobao.com/127.0.0.1#5353
 server=/tmall.com/127.0.0.1#5353
