--- a/ocserv.conf
+++ b/ocserv.conf
@@ -17,8 +17,8 @@ max-clients = 0
 max-same-clients = 0
 
 # timeout 
-#server-stats-reset-time = 604800
-#session-timeout = 86400
+server-stats-reset-time = 604800
+session-timeout = 86400
 #idle-timeout = 1200
 #mobile-idle-timeout = 2400
 keepalive = 32400
@@ -35,7 +35,7 @@ rekey-method = ssl
 try-mtu-discovery = false
 compression = false
 #no-compress-limit = 256
-output-buffer = 800
+output-buffer = 50
 #use-utmp = true
 #use-occtl = true
 predictable-ips = true
@@ -45,8 +45,8 @@ cisco-client-compat = true
 dtls-legacy = true
 
 device = vpns
-ipv4-network = 192.168.18.0
-ipv4-netmask = 255.255.255.0
+ipv4-network = 192.168.18.0/24
+#ipv4-netmask = 255.255.255.0
 tunnel-all-dns = true
 dns = 192.168.18.1
 
