--- a/ocserv.conf
+++ b/ocserv.conf
@@ -170,6 +170,23 @@ route = 115.240.0.0/12
 route = 116.202.0.0/16
 route = 116.206.0.0/22
 route = 117.192.0.0/10
+route = 118.0.0.0/12
+route = 118.16.0.0/13
+route = 118.32.0.0/11
+route = 118.86.0.0/15
+route = 118.88.0.0/13
+route = 118.96.0.0/12
+route = 118.126.0.0/15
+route = 118.128.0.0/14
+route = 118.136.0.0/13
+route = 118.148.0.0/14
+route = 118.152.0.0/13
+route = 118.160.0.0/12
+route = 118.176.0.0/15
+route = 118.214.0.0/15
+route = 118.216.0.0/13
+route = 118.232.0.0/13
+route = 118.240.0.0/15
 route = 121.6.0.0/15
 route = 121.44.0.0/15
 route = 121.64.0.0/14
