--- a/ocserv.conf
+++ b/ocserv.conf
@@ -17,8 +17,8 @@ max-clients = 0
 max-same-clients = 0
 
 # timeout 
-server-stats-reset-time = 604800
-session-timeout = 86400
+#server-stats-reset-time = 604800
+#session-timeout = 86400
 #idle-timeout = 1200
 #mobile-idle-timeout = 2400
 keepalive = 32400
@@ -33,9 +33,10 @@ rekey-time = 172800
 rekey-method = ssl
 
 try-mtu-discovery = false
+mtu = 1420
 compression = false
 #no-compress-limit = 256
-output-buffer = 50
+output-buffer = 500
 #use-utmp = true
 #use-occtl = true
 predictable-ips = true
