--- a/ocserv.conf
+++ b/ocserv.conf
@@ -19,11 +19,11 @@ max-same-clients = 0
 # timeout 
 #server-stats-reset-time = 604800
 #session-timeout = 86400
-idle-timeout = 2400
+#idle-timeout = 1200
 mobile-idle-timeout = 2400
 keepalive = 32400
 #auth-timeout = 40
-dpd = 30
+dpd = 90
 mobile-dpd = 1800
 switch-to-tcp-timeout = 25
 persistent-cookies = true
@@ -33,7 +33,7 @@ rekey-time = 172800
 rekey-method = ssl
 
 try-mtu-discovery = false
-#mtu = 1420
+mtu = 1480
 compression = false
 #no-compress-limit = 256
 output-buffer = 500
