--- a/wg-client-allowedips.conf
+++ b/wg-client-allowedips.conf
@@ -129,6 +129,23 @@ AllowedIPs = 115.188.0.0/15
 AllowedIPs = 115.240.0.0/12
 AllowedIPs = 116.202.0.0/16
 AllowedIPs = 116.206.0.0/22
+AllowedIPs = 118.0.0.0/12
+AllowedIPs = 118.16.0.0/13
+AllowedIPs = 118.32.0.0/11
+AllowedIPs = 118.86.0.0/15
+AllowedIPs = 118.88.0.0/13
+AllowedIPs = 118.96.0.0/12
+AllowedIPs = 118.126.0.0/15
+AllowedIPs = 118.128.0.0/14
+AllowedIPs = 118.136.0.0/13
+AllowedIPs = 118.148.0.0/14
+AllowedIPs = 118.152.0.0/13
+AllowedIPs = 118.160.0.0/12
+AllowedIPs = 118.176.0.0/15
+AllowedIPs = 118.214.0.0/15
+AllowedIPs = 118.216.0.0/13
+AllowedIPs = 118.232.0.0/13
+AllowedIPs = 118.240.0.0/15
 AllowedIPs = 117.192.0.0/10
 AllowedIPs = 121.6.0.0/15
 AllowedIPs = 121.44.0.0/15
