--- a/split-dns.conf
+++ b/split-dns.conf
@@ -19,7 +19,7 @@ split-dns = dropboxusercontent.com
 split-dns = dropboxbusiness.com
 split-dns = dropboxforums.com
 split-dns = dropboxforum.com
-dsplit-dns = ropboxinsiders.com
+split-dns = dropboxinsiders.com
 split-dns = dropboxmail.com
 split-dns = dropboxpartners.com
 split-dns = dropboxstatic.com
